Added forever to run command

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "Sahat Yalkabov",
   "license": "MIT",
   "scripts": {
+    "forever": "forever start app.js",
     "start": "node app.js",
     "test": "mocha --reporter spec"
   },
