--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "express-status-monitor": "^0.1.5",
     "express-validator": "^2.21.0",
     "fbgraph": "^1.3.0",
+    "forever": "^0.15.3",
     "github": "^5.3.3",
     "instagram-node": "^0.5.8",
     "lastfm": "^0.9.2",
